# vdr-plugin-webvideo

./: CMakeLists.txt  HISTORY  Makefile  README  README.webvi  TODO
cmake/modules/: FindLibTidy.cmake
debian/: changelog  copyright  rules
src/: version.h.in
src/libwebvi/: CMakeLists.txt  Makefile  libwebvi.c  libwebvi.h  link.c  link.h  linkextractor.c  linkextractor.h  linktemplates.c  linktemplates.h  mainmenu.c  mainmenu.h  menubuilder.c  menubuilder.h  pipecomponent.c  pipecomponent.h  request.c  request.h  urlutils.c  urlutils.h  webvicontext.c  webvicontext.h
src/libwebvi/webvi/: api.py  asyncurl.py  constants.py  download.py  json2xml.py  request.py  utils.py  version.py
src/menuscripts/: stream-areena  stream-quvi  utils.sh
src/pywebvi/: pywebvi.py
src/unittest/: Makefile  testdownload.c  testlibwebvi.c  testwebvi.py
src/vdr-plugin/: Makefile  download.c  download.h  filedownloader.c  filedownloader.h  menu.c  menu.h  request.c  request.h  timer.c  timer.h  webvideo.c
src/vdr-plugin/po/: uk_UA.po
src/webvicli/: webvi
src/webvicli/webvicli/: client.py  menu.py  menuparser.py
templates/areena.yle.fi/: common.xsl  description.xsl  livebroadcasts.xsl  mainmenu.xsl  navigation.xsl  search.xsl  video.xsl
templates/katsomo.fi/: description.xsl  program.xsl  searchresults.xsl  video.xsl
templates/moontv.fi/: description.xsl  mainmenu.xsl  programlist.xsl  recent.xsl  service.xml  videopage.xsl
templates/video.google.com/: search.xsl  searchresults.xsl  videopage.xsl
templates/www.metacafe.com/: categories.xsl  videopage.xsl
templates/www.ruutu.fi/: description.xsl  mainmenu.xsl  mostviewed.xsl  program.xsl  recent.xsl  series.xsl  video.xsl  videopage.xsl
templates/www.youtube.com/: description.xsl  navigation.xsl  video.xsl  videopage.xsl
tests/: CMakeLists.txt  context_tests.c  context_tests.h  libwebvi_tests.c  linkextractor_tests.c  linkextractor_tests.h  linktemplates_tests.c  linktemplates_tests.h  menubuilder_tests.c  menubuilder_tests.h  pipe_tests.c  pipe_tests.h  urlutils_tests.c  urlutils_tests.h
tests/data/: links
tests/data/websites/www.youtube.com/: menu.xml
websites/: links
websites/101greatgoals.com/: menu.xml
websites/areena.yle.fi/: menu.xml
websites/vimeo.com/: menu.xml
websites/www.funnyordie.com/: menu.xml
websites/www.gaskrank.tv/: menu.xml
websites/www.metacafe.com/: menu.xml
websites/www.ted.com/: menu.xml
websites/www.videobash.org/: menu.xml
websites/www.wimp.com/: menu.xml
websites/www.youtube.com/: menu.xml  search.xml
