CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(libwebvi)

ENABLE_TESTING()

# Version number
SET(MAJOR_VERSION "0")
SET(MINOR_VERSION "99")
SET(PATCH_VERSION "0")

CONFIGURE_FILE(
  "${CMAKE_SOURCE_DIR}/src/version.h.in"
  "${CMAKE_CURRENT_BINARY_DIR}/version.h"
  @ONLY)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

ADD_SUBDIRECTORY(src/libwebvi)
ADD_SUBDIRECTORY(tests)

